// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`getComponentCss() should return correct css for multiline: false 1`] = `
":host {
  display: table-cell;
  vertical-align: middle;
  padding: var(--p-internal-table-padding, clamp(8px, 0.5vw + 6px, 16px)) !important;
  margin: 0 !important;
  white-space: nowrap !important;
}
:host([hidden]) {
  display: none !important;
}"
`;

exports[`getComponentCss() should return correct css for multiline: true 1`] = `
":host {
  display: table-cell;
  vertical-align: middle;
  padding: var(--p-internal-table-padding, clamp(8px, 0.5vw + 6px, 16px)) !important;
  margin: 0 !important;
  white-space: normal !important;
}
:host([hidden]) {
  display: none !important;
}"
`;
